# novel-auto-writer

./: .gitignore  README.md
projects/novel-writer-cli/: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
projects/novel-writer-cli/novel_writer/: __main__.py  db.py  envfile.py  llm.py  orchestrator.py  prompts.py  telegraph.py  utils.py
skills/novel-auto-writer/: SKILL.md
skills/novel-auto-writer/scripts/: novel.sh  plan_summary.py
